--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
-name: music_player
-description: A new flutter plugin project.
-version: 0.0.1
-author: Exit Live
-homepage: https://gitlab.com/exitlive
+name: flutter plugin
+description: A flutter plugin to enable music playback with the native iOS and Android control centers.
+version: 0.0.2
+authors:
+  - mohak srivastav <vs6778502@gmail.com>
+homepage: https://github.com/whiteHatpro/flutter_music_plugin
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
@@ -12,6 +13,7 @@ dependencies:
     sdk: flutter
   crypto: ^2.0.0
   flutter_cache_manager: ^0.2.0
+  meta: ^1.1.0
   path: ^1.6.0
   path_provider: ^0.4.1
 # For information on the generic Dart part of this file, see the
